fixed desktop top offset jumping

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,3 +8,9 @@
     margin-top: 80px;
   }
 }
+
+.top-offset {
+  @include breakpoint(desktop) {
+    margin-top: 111px;
+  }  
+}
